<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/salario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/salario"
            android:layout_marginTop="32dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salario_mensal"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            />


        <EditText
            android:id="@+id/gastos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/gastos"
            android:layout_marginTop="32dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gastos_saude_educacao"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            />

        <EditText
            android:id="@+id/dependentes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/dependentes"
            android:layout_marginTop="32dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numero_dependentes"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/imposto"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:id="@+id/resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dinheiro"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/button_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/calcular"
        app:layout_constraintVertical_bias="0.60"
        android:backgroundTint="@color/green"
        />

</androidx.constraintlayout.widget.ConstraintLayout>